whote-space nowrap on seeplans and joinforfree links to avoid two lines

--- a/style.css
+++ b/style.css
@@ -192,6 +192,7 @@ div.build-element   {
 div.build-element a {
     font-weight:1000;
     text-decoration:none;
+    white-space: nowrap;
     padding:0.75em 3.25em;
 }
 
